--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "webpack",
+    "build/prod": "webpack --mode production",
+    "build/dev": "webpack",
     "watch": "webpack --watch",
     "start": "webpack-dev-server"
   },
@@ -14,5 +15,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
