ESLint -> 構文チェック、Prettier -> コード整形を実行するように修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,24 @@
 {
-  "extends": ["eslint:recommended"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "env": {
     "browser": true,
     "es6": true,
     "node": true
   },
-  "globals": {},
   "parserOptions": {
     "ecmaVersion": 2015
   },
   "rules": {
-    "no-extra-semi": "warn",
-    "semi": "warn",
-    "no-undef": "warn",
-    "quotes": ["warn", "single"],
-    "space-before-blocks": [
-      "warn",
+    "prettier/prettier": [
+      "error",
       {
-        "functions": "always",
-        "keywords": "always",
-        "classes": "always"
+        "singleQuote": true,
+        "trailingComma": "es5"
       }
-    ]
+    ],
+    "no-undef": "warn"
   }
 }
