--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "build/prod": "webpack --mode production",
-    "build/dev": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "build/prod": "npm run list && webpack --mode production",
+    "build/dev": "npm run list && webpack",
+    "watch": "npm run list && webpack --watch",
+    "start": "npm run list && webpack-dev-server",
+    "lint": "eslint --fix ."
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -11,7 +12,10 @@
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
